--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dfv",
   "version": "1.0.0",
   "description": "a web tool to evaluate feature votes",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
