--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10"
   }
 }
