--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
-    "mongoose": "^5.7.10"
+    "mongoose": "^5.7.10",
+    "winston": "^3.2.1"
   }
 }
