--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a web tool to evaluate feature votes",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
+    "react-router-dom": "^5.1.2",
     "winston": "^3.2.1"
   }
 }
