--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/featurevoting/feature-voting#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "concurrently": "^5.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -26,6 +27,7 @@
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
     "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.1.1",
     "winston": "^3.2.1"
   }
 }
