--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
+    "multer": "^1.4.2",
     "winston": "^3.2.1"
   }
 }
