--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
+    "multer": "^1.4.2",
+    "newrelic": "^6.2.0",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.1.1",
-    "multer": "^1.4.2",
     "winston": "^3.2.1"
   }
 }
