--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "gridfs-stream": "^1.1.1",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
     "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.0.1",
     "newrelic": "^6.2.0",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.1.1",
