--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "start": "node server/index.js",
     "build": "cd client/ && npm install && npm run build"
   },
+  "cacheDirectories": [
+    "node_modules",
+    "client/node_modules"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/featurevoting/feature-voting.git"
