--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server/index.js",
-    "build": "cd client/ && npm install && npm run build"
+    "build": "cd client/ && npm install && npm run build && npm start"
   },
   "cacheDirectories": [
     "node_modules",
