--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "bootstrap": "^4.4.1",
     "concurrently": "^5.0.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "google-auth-library": "^5.7.0",
     "joi": "^14.3.1",
     "joi-objectid": "^3.0.1",
     "mongoose": "^5.7.10",
