--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.2",
     "newrelic": "^6.2.0",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
     "reactstrap": "^8.1.1",
     "winston": "^3.2.1"
   }
