--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
+    "react-grid-gallery": "^0.5.5",
     "react-router-dom": "^5.1.2",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.1.1",
