--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 node_modules
-config
 .idea/
 newrelic_agent.log
 error-log.txt
 
 server/public
 !server/public/test.jpg
-server/config/keys.js
+server/config
