--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "reactstrap": "^8.1.1"
