--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node server/index.js",
+    "start": "npm install && npm run build && node server/index.js",
     "build": "cd client/ && npm install && npm run build"
   },
   "cacheDirectories": [
