--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ error-log.txt
 
 server/public
 !server/public/test.jpg
-client/src/firebase-config.js
+client/src/firebase-keys.js
 server/config
+client/Design
