--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
     "react-read-more-less": "^0.1.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
