--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-login": "^5.0.7",
     "react-read-more-less": "^0.1.6",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
