--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
+    "react-scroll-up-button": "^1.6.4",
     "reactstrap": "^8.1.1"
   },
   "scripts": {
