--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.12.0",
     "react-addons-update": "^15.6.2",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-ga": "^2.7.0",
